avoids wrapping due to form elements (IE)

--- a/catalog/static/style/forms.css
+++ b/catalog/static/style/forms.css
@@ -7,6 +7,12 @@
  *
  */
 
+/* Inline avoids wrapping due to form elements */
+
+form { 
+  display: inline;
+}
+
 /* Standard form elements styling */
 
 fieldset {
